2015-06-18  Mark Wielaard  <mjw@redhat.com>

	* find-debuginfo.c (try_open): Free fname on all failure paths.

2015-06-18  Mark Wielaard  <mjw@redhat.com>

	* dwfl_module_getdwarf.c (find_symtab): Check shdr is not NULL and
	sh_entsize is not zero.

2015-06-06  Mark Wielaard  <mjw@redhat.com>

	* find-debuginfo.c (find_debuginfo_in_path): Always free localpath,
	localname and file_dirname.

2015-06-06  Mark Wielaard  <mjw@redhat.com>

	* derelocate.c (cache_sections): Free sortrefs.

2015-06-05  Mark Wielaard  <mjw@redhat.com>

	* dwfl_segment_report_module.c (dwfl_segment_report_module):
	If the note_file exists, but the build_id doesn't match discard
	the file and continue reporting.

2015-06-01  Mark Wielaard  <mjw@redhat.com>

	* dwfl_build_id_find_elf.c (__libdwfl_open_by_build_id): Copy path
	pointer before passing to strsep.

2015-05-30  Mark Wielaard  <mjw@redhat.com>

	* link_map.c (check32): Use read_4ubyte_unaligned_noncvt to read
	type and value.
	(read_addrs): Use read_(4|8)ubyte_unaligned_noncvt or to read
	adresses.

2015-05-30  Mark Wielaard  <mjw@redhat.com>

	* find-debuginfo.c (dwfl_standard_find_debuginfo): Check file_name is
	not NULL before calling canonicalize_file_name.

2015-05-24  Mark Wielaard  <mjw@redhat.com>

	* derelocate.c (check_module): Check mod is not NULL.

2015-05-22  Mark Wielaard  <mjw@redhat.com>

	* link_map.c (dwfl_link_map_report): Allocate phdrs and dyn with
	malloc instead of stack allocating. Call free when done with data.

2015-05-22  Mark Wielaard  <mjw@redhat.com>

	* dwfl_segment_report_module.c (dwfl_segment_report_module):
	Allocate phdrs with malloc, not on stack. free in finish.
	Allocate dyn with malloc, not on stack, free after use.

2015-05-22  Mark Wielaard  <mjw@redhat.com>

	* find-debuginfo.c (find_debuginfo_in_path): malloc or strdup,
	instead of alloca or strdupa, local strings of unknown size.
	Call free before return.

2015-05-22  Mark Wielaard  <mjw@redhat.com>
